--- a/style.css
+++ b/style.css
@@ -102,6 +102,8 @@ a:hover {
   max-height: 0;
   overflow: hidden;
   transition: all 0.3 ease-in-out;
+  z-index: 1000;
+  padding: 12px 6px;
 }
 
 .menu-links a {
@@ -167,6 +169,7 @@ section {
   justify-content: center;
   gap: 5rem;
   height: 80vh;
+  z-index: 1000;
 }
 
 .section__pic-container {
@@ -174,11 +177,13 @@ section {
   height: 400px;
   width: 400px;
   margin: auto 0;
+  z-index: 1;
 }
 
 .section__text {
   align-self: center;
   text-align: center;
+  z-index: 1;
 }
 
 .section__text p {
