--- a/src/css/style.css
+++ b/src/css/style.css
@@ -274,8 +274,7 @@ section {
 
 .about-containers {
   gap: 2rem;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
+  margin: 2rem 0;
 }
 
 .about-details-container {
@@ -289,7 +288,8 @@ section {
 }
 
 .about-pic {
-  border-radius: 2rem;
+  border-radius: 1rem;
+  height: 100%;
 }
 
 .arrow {
@@ -297,15 +297,27 @@ section {
   right: -5rem;
   bottom: 2.5rem;
 }
+.arrow__skill {
+  position: absolute;
+  right: 5rem;
+}
+.arrow:hover,
+.arrow__skill:hover {
+  scale: 1.2;
+  transition: all 0.3s ease-in;
+}
 
 .details-container {
   padding: 1.5rem;
   flex: 1;
   background: white;
-  border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
+  border-radius: 1rem;
+  border: 1px solid #faf9f9;
   text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+}
+.text-container__content {
+  margin-top: 10px;
 }
 
 .section-container {
@@ -337,6 +349,13 @@ section {
   justify-content: center;
   flex-direction: column;
 }
+.experience-content {
+  /* background: red; */
+  margin-top: 20px;
+}
+.experience-content > li {
+  margin: 10px 12px;
+}
 
 .article-container {
   display: flex;
@@ -345,12 +364,13 @@ section {
   flex-direction: row;
   gap: 2.5rem;
   justify-content: space-around;
+  justify-content: center;
 }
 
 article {
   display: flex;
   width: 10rem;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   gap: 0.5rem;
 }
 
@@ -364,13 +384,12 @@ article .icon {
   position: relative;
 }
 
-.color-container {
-  border-color: rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
-}
-
 .project-img {
-  border-radius: 2rem;
+  /* border-radius: 1rem; */
+  margin-top: 16px;
+  border: 1px solid #ededed;
+  border-top-left-radius: 0.6rem;
+  border-top-right-radius: 0.6rem;
   width: 90%;
   height: 90%;
 }
@@ -388,6 +407,7 @@ article .icon {
 /* CONTACT */
 
 #contact {
+  margin-top: 250px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -397,12 +417,12 @@ article .icon {
 .contact-info-upper-container {
   display: flex;
   justify-content: center;
-  border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
+  border-radius: 1rem;
+  border: 1px solid #faf9f9;
   background: (250, 250, 250);
   margin: 2rem auto;
   padding: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
 }
 
 .contact-info-container {
@@ -434,4 +454,17 @@ footer {
 
 footer p {
   text-align: center;
+}
+.onTop {
+  height: 50px;
+  width: 50px;
+  position: fixed;
+  bottom: 20px;
+  right: 16px;
+  display: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.onTop:hover {
+  scale: 1.2;
 }
