--- a/src/css/style.css
+++ b/src/css/style.css
@@ -221,17 +221,17 @@ section {
 /* BUTTONS */
 
 .btn-container {
+  margin-top: 1.2rem;
   display: flex;
   justify-content: center;
-  gap: 1rem;
 }
 
 .btn {
   font-weight: 600;
   transition: all 300ms ease;
-  padding: 1rem;
-  width: 8rem;
-  border-radius: 2rem;
+  padding: 8px 16px;
+  width: auto;
+  border-radius: 1rem;
 }
 
 .btn-color-1,
@@ -403,11 +403,13 @@ article .icon {
   color: black;
   border-color: rgb(163, 163, 163);
 }
-
+.project_v2 {
+  display: none;
+}
 /* CONTACT */
 
 #contact {
-  margin-top: 250px;
+  /* margin-top: 20px; */
   display: flex;
   justify-content: center;
   flex-direction: column;
