--- a/src/css/animation.css
+++ b/src/css/animation.css
@@ -1,3 +1,14 @@
+.slide-up {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+}
+
+.slide-up.active {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 /* ---- reset ---- */
 body {
   margin: 0;
@@ -12,7 +23,7 @@ canvas {
   width: 100%;
   height: 100%;
   background-color: transparent;
-  background-image: url("");
+  background-image: url('');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
